use js_fn_unsafe if possible (+2 squashed commits) Squashed commits: [b4df373] WIP [5aaab2f] prepare js_unsafe runtime support instead of generating it on-the-fly (on-the-fly in browser mode)

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -95,7 +95,7 @@ install:
 	cp  ./bin/bsc ../bin/
 	cp ./runtime/*.cmt* ../lib/ocaml/
 	cp ./runtime/*.cmj* ../lib/ocaml/
-	cp ./runtime/js.cmi ./runtime/js_array.cmi ./runtime/js_string.cmi ./runtime/js_re.cmi ../lib/ocaml/	
+	cp ./runtime/js.cmi ./runtime/js_array.cmi ./runtime/js_string.cmi ./runtime/js_re.cmi ./runtime/js_unsafe.cmi ../lib/ocaml/	
 	cp ./stdlib/*.cm* ../lib/ocaml/
 
 TMP_OCAMLLIB=$(shell ocamlopt.opt -where)
