--- a/jscomp/runtime/Makefile
+++ b/jscomp/runtime/Makefile
@@ -9,16 +9,15 @@ OTHERS= caml_array caml_string caml_bytes\
 	caml_format caml_md5 caml_queue caml_hash caml_weak\
 	caml_backtrace caml_int32 caml_gc typed_array \
 	js_primitive caml_basic caml_oo curry caml_module \
-	bs_string  js_float js_obj js_nativeint js_int 
+	bs_string  js_float js_obj js_nativeint js_int js_null js_null_undefined
 
 SOURCE_LIST= $(OTHERS) caml_builtin_exceptions  block  js js_unsafe
 
 caml_oo.cmj : caml_array.cmj
 caml_format.cmj caml_io.cmj: curry.cmj
-
-
-$(addsuffix .cmj, $(OTHERS)): caml_builtin_exceptions.cmj  block.cmj js.cmj 
-
+caml_builtin_exceptions.cmj: caml_builtin_exceptions.cmi
+block.cmj: block.cmi
+$(addsuffix .cmj, $(OTHERS)): caml_builtin_exceptions.cmj  block.cmj js.cmj js_unsafe.cmj
 ## since we use ppx
 $(addsuffix .cmi, $(OTHERS)): js.cmi js_unsafe.cmj js_unsafe.cmi
 
@@ -33,7 +32,6 @@ BS_FLAGS=  $(BS_COMMON_FLAGS) -bs-package-output lib/js
 endif
 
 COMPFLAGS += $(BS_FLAGS) -I ../stdlib -nostdlib -nopervasives -open Pervasives -unsafe -w -40-49
-
 
 
 $(RUNTIME): $(COMPILER)
@@ -54,7 +52,10 @@ clean::
 
 -include .runtimedepend
 
+ML_SOURCES=$(addsuffix .ml, $(OTHERS))
+MLI_SOURCES=$(addsuffix .mli, $(OTHERS))
+
 depend:
-	$(CAMLDEP) $(INCLUDES) *.mli *.ml | sed -e 's/\.cmo/.cmj/g' > .runtimedepend
-	$(CAMLDEP) $(INCLUDES) *.ml | sed -e 's/\.cmx/.cmj/g' >>.runtimedepend
+	$(CAMLDEP) $(INCLUDES) $(ML_SOURCES) $(MLI_SOURCES) | sed -e 's/\.cmo/.cmj/g' > .runtimedepend
+	$(CAMLDEP) $(INCLUDES) $(ML_SOURCES) | sed -e 's/\.cmx/.cmj/g' >>.runtimedepend
 
