--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -63,7 +63,9 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	test_require more_uncurry earger_curry_test poly_type bench mutable_obj_test\
 	gpr_658 module_as_class_ffi pipe_send_readline demo_pipe bs_array_test bs_string_test\
 	watch_test bs_node_string_buffer_test \
-	bs_ignore_test bs_ignore_effect
+	bs_ignore_test bs_ignore_effect \
+	ppx_this_obj_field
+
 
 
 
