re-bootstrap (+1 squashed commit) Squashed commits: [72a27e6] fix ocamlc_config and stdlib path (+11 squashed commits) Squashed commits: [1948b6a] other tweaks [b979905] make sure the installation directory always exist [a5873ba] rename files [77752ff] tweak [9f1d94c] tweak [951c7dc] tweak Makefile [dd418ac] Make windows work [530c3a9] make scripts windows friendly [3447f23] WIP: add a config step, so dont rebuild compiler when unnecessary [2ff302d] update: no open Config in Ocaml_options [9056121] wip windows support

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ _build
 *.cma
 *.a
 *.cmxa
-*~
+*.obj
+ *~
 *.annot
 *.mj
 *.bak
@@ -34,13 +35,12 @@ _build
 *.lambda
 *.zip
 *.gz
-# special file 
+# special file
 
 bsc
 bscc
 bsppx
-jscomp/tools/ocamlpack*
-
+jscomp/bin/whole_compiler_config.ml
 .idea
 
 node_modules
@@ -57,6 +57,7 @@ man/
 lib/ocaml
 bin/*
 ocaml_src
+*.exe
 
 # for npm publish
 !bin/bsc
