--- a/jscomp/test/Makefile
+++ b/jscomp/test/Makefile
@@ -65,7 +65,7 @@ OTHERS := literals a test_ari test_export2 test_internalOO test_obj_simple_ffi t
 	watch_test bs_node_string_buffer_test \
 	bs_ignore_test bs_ignore_effect \
 	ppx_this_obj_field single_module_alias \
-	CCSexpM CCSexpM_test CCSexp js_json_test array_subtle_test  \
+	sexpm sexpm_test sexp js_json_test array_subtle_test  \
 	bytes_split_gpr_743_test module_splice_test hello.foo
 
 
