--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "jasmine-core": "^2.4.1",
     "karma": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.1",
-    "mocha": "^2.3.4",
+    "mocha": "^2.5.3",
     "mocha-lcov-reporter": "^1.2.0",
     "should": "^10.0.0",
     "should-equal": "^1.0.0",
     "uglify-js": "^2.6.1"
   },
   "scripts": {
-    "test": "mocha './jscomp/test/**/*_test.js' ",
-    "wtest": "mocha './jscomp/test/**/*_test.js'  -R spec -w",
+    "test": "mocha './jscomp/test/**/*test.js' ",
+    "wtest": "mocha './jscomp/test/**/*test.js'  -R spec -w",
     "cover": "node ./node_modules/istanbul/lib/cli.js cover --report html ./node_modules/.bin/_mocha --   ./jscomp/test/**/*test.js",
     "coverage": "`npm bin`/istanbul cover ./node_modules/.bin/_mocha --report lcovonly --  './jscomp/test/*test.js' -R spec",
     "coveralls": "npm run-script coverage && node ./node_modules/.bin/coveralls < coverage/lcov.info",
