add bsdep.exe into installation

--- a/jscomp/Makefile
+++ b/jscomp/Makefile
@@ -44,6 +44,8 @@ js_fold.ml:js_fold.mlp j.ml
 ./bin/bsppx.exe: ./bin/config_bsppx.mli ./bin/config_bsppx.ml ./bin/bsppx.mli ./bin/bsppx.ml
 	$(NATIVE) -g -inline 1000 -linkall -w -a -I bin    $^ -o $@
 
+./bin/bsdep.exe: ./bin/config_bsdep.mli ./bin/config_bsdep.ml ./bin/bsdep.mli ./bin/bsdep.ml
+	$(NATIVE) -g -inline 1000 -linkall -w -a -I bin    $^ -o $@
 
 snapshot: ./bin/bspack.exe snapshotcmj
 	$(MAKE) snapshotml
@@ -53,6 +55,7 @@ snapshotml:./bin/bspack.exe ./bin/compiler.mllib
 	$< -bs-mllib bin/compiler.mllib -o bin/compiler.ml
 	$< -bs-log-mllib bin/bsppx.mllib  -prelude-str 'module Config = Config_bsppx'  -bs-exclude-I config -I ../ocaml/utils/ -I ../ocaml/parsing/ -I common -I ext -I syntax -bs-main bsppx_main.ml -o bin/bsppx.ml
 	$< -bs-log-mllib bin/whole_compiler.mllib -prelude-str 'module Config = Config_whole_compiler' -bs-exclude-I config -o bin/whole_compiler.ml -bs-main js_main.ml -I ../ocaml/utils/ -I ../ocaml/parsing/ -I ../ocaml/typing/ -I ../ocaml/bytecomp/ -I ../ocaml/driver/ -I ext -I syntax -I depends -I common
+	$< -bs-log-mllib bin/bsdep.mllib  -prelude-str 'module Config = Config_bsdep'  -bs-exclude-I config -I ../ocaml/utils/ -I ../ocaml/parsing/ -I ../ocaml/driver -I common -I ext -I syntax -I depends -bs-main bsdep_main.ml -o bin/bsdep.ml
 
 snapshotcmj:
 	@echo "Collecting cmj files"
@@ -99,6 +102,7 @@ releasebuild:./bin/bspack.exe
 	$(NATIVE) -g -inline 1000 -linkall  -w -a -I +compiler-libs -I bin ocamlcommon.cmxa  bin/compiler.mli bin/compiler.ml -o bin/bsc.exe
 	@echo "Make release ppx"
 	$(NATIVE) -g -inline 1000 -linkall  -w -a -I bin  bin/config_bsppx.mli bin/config_bsppx.ml  bin/bsppx.mli bin/bsppx.ml -o bin/bsppx.exe
+	$(NATIVE) -g -inline 1000 -linkall  -w -a -I bin  bin/config_bsdep.mli bin/config_bsdep.ml  bin/bsdep.mli bin/bsdep.ml -o bin/bsdep.exe
 
 release:snapshot
 	$(MAKE) releasebuild
@@ -114,6 +118,7 @@ dist-world:
 	$(NATIVE) -w -a -I bin  ./bin/config_whole_compiler.mli ./bin/config_whole_compiler.ml  ./bin/whole_compiler.mli ./bin/whole_compiler.ml -o bin/bsc.exe
 	$(MAKE) bin/bspack.exe
 	$(MAKE) bin/bsppx.exe
+	$(MAKE) bin/bsdep.exe
 	$(MAKE) libs
 
 
@@ -133,7 +138,7 @@ DEST_BIN=../bin
 install:
 	@echo "copy exe"
 	mkdir -p $(DEST_BIN) $(DEST)
-	cp  ./bin/bsc.exe ./bin/bsppx.exe  ./bin/bspack.exe $(DEST_BIN)
+	cp  ./bin/bsc.exe ./bin/bsppx.exe  ./bin/bspack.exe ./bin/bsdep.exe $(DEST_BIN)
 	@echo "copy stdlib"
 	cp ./runtime/*.cmt* ./runtime/*.cmj* ./stdlib/*.cm* ./others/*.ml ./others/*.mli  ./others/*.cm* \
 	 ./runtime/js.ml  ./runtime/js.cmi ./runtime/js_unsafe.cmi ./runtime/js_null.ml ./runtime/js_null.cmi \
